# jobmanager

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  Readme.md  clients.py  example.py  example_client.py  genindex.html  index.html  jobmanager.py  objects.inv  ode_wrapper.py  progress.py  py-modindex.html  pyproject.toml  run_pytest_html.sh  search.html  searchindex.js  servers.py  setup.py  simple_example.py  test_clients.py  test_jobmanager.py  test_process.py  test_progress.py  tests.py
_downloads/: simple_example.py  wrapper_example.py
_modules/: index.html
_modules/jobmanager/: clients.html  decorators.html  jobmanager.html  ode_wrapper.html  persistentData.html  progress.html  servers.html
_sources/: index.txt
advanced_example/: calculations.py  client.py  my_jobmanager_classes.py  server.py
doc/: Readme.md  commit_gh-pages.py  conf.py  deploy_ghpages.py  description.txt
examples/: FunctionCall_Client_example.py  FunctionCall_Client_exmple.py  pool_map.py  simple_example.py  wrapper_example.py
examples/advanced/: calculations.py  client.py  my_jobmanager_classes.py  server.py
examples/simple/: simple_example.py
jobmanager/: __init__.py  binfootprint.py  clients.py  decorators.py  jm_version.py  jobmanager.py  ode_wrapper.py  persistentData.py  progress.py  servers.py  signalDelay.py  test_jobmanager.py  test_progress.py
simple_example/: simple_example.py
test/: README.md  test_clients.py  test_decorators.py  test_jobmanager.py  test_persistentData.py  test_progress.py
tests/: README.md  runtests.py  runtests_html.sh  start_autoproxy_server.py  test_binfootprint.py  test_clients.py  test_decorators.py  test_jobmanager.py  test_persistentData.py  test_persistentData_hdf5.py  test_progress.py  test_servers.py  test_signalDelay.py
