[tool.poetry]
name = "jobmanager"
version = "0.4.2"
description = "a facility for distributed computing"
authors = ["Richard Hartmann", "Paul Müller"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cimatosa/jobmanager"
repository = "https://github.com/cimatosa/jobmanager"
keywords =[
    "multiprocessing", "queue", "parallel", "distributed", "computing", "progress", "manager", "job",
    "persistent data", "scheduler"
]
classifiers = [
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Intended Audience :: Science/Research'
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.24.1"
scipy = "^1.8.1"
progression = "^0.1.4"
binfootprint = "^1.2.0"


[tool.poetry.dev-dependencies]
psutil = "^5.8.0"
pytest = "^7.0.0"
black = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

